--- a/weontosomething22.ipynb
+++ b/weontosomething22.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM08zDKGkB93qtZVUKldtiR",
+      "authorship_tag": "ABX9TyP+3Q6EcnYJBYEZfpxoyfB4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,71 +317,77 @@
         "    plot_training_history(history)\n",
         "\n",
         "def plot_results(stream, predictions, config, use_real_data, metrics=None):\n",
-        "    plt.figure(figsize=(15, 10))\n",
+        "    plt.figure(figsize=(15, 12))\n",
         "\n",
         "    # Plot original data\n",
         "    plt.subplot(3, 1, 1)\n",
-        "    plt.plot(stream[0].data)\n",
+        "    plt.plot(stream[0].data, color='navy', linewidth=1.5)\n",
+        "    plt.title(\"Original Seismic Data\", fontsize=12, fontweight='bold')\n",
+        "    plt.xlabel(\"Samples\", fontsize=10)\n",
+        "    plt.ylabel(\"Amplitude\", fontsize=10)\n",
+        "\n",
         "    if metrics:\n",
-        "      plt.title(f\"Original Seismic Data\\nAccuracy:{metrics['accuracy']:.4f},\"\n",
-        "      f\"Precision:{metrics['precision']:.4f},\"\n",
-        "      f\"Recall{metrics['recall']:.4f},\"\n",
-        "      f\"F1:{metrics['f1']:.4f}\")\n",
-        "    else:\n",
-        "      plt.title(\"Original Seismic Data\")\n",
-        "    plt.xlabel(\"Samples\")\n",
-        "    plt.ylabel(\"Amplitude\")\n",
+        "      plt.text(0.02, 0.98,\n",
+        "               f\"Accuracy: {metrics['accuracy']:.4f}\\n\"\n",
+        "               f\"Precision:{metrics['precision']:.4f}\\n\"\n",
+        "               f\"Recall:{metrics['recall']:.4f}\\n\"\n",
+        "               f\"F1 Score:{metrics['f1']:.4f}\",\n",
+        "               transform=plt.gca().transAxes,\n",
+        "               verticalalignment='top',\n",
+        "               bbox=dict(boxstyle='round', facecolor='white', alpha=0.7))\n",
         "\n",
-        "    # Plot predictions\n",
-        "    plt.subplot(3, 1, 2)\n",
-        "    plt.plot(predictions)\n",
-        "    plt.title(\"Detection Predictions\")\n",
-        "    plt.xlabel(\"Windows\")\n",
-        "    plt.ylabel(\"Probability\")\n",
+        "    plt.subplot(3,1,2)\n",
+        "    plt.plot(predictions, color='green', linewidth=1.5, alpha=0.7)\n",
+        "    plt.title(\"Detection Prediction Probabilities\", fontsize=12, fontweight='bold')\n",
+        "    plt.xlabel(\"Windows\", fontsize=10)\n",
+        "    plt.ylabel(\"Probability\", fontsize=10)\n",
+        "    plt.ylim(0,1)\n",
+        "    plt.grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
-        "    plt.subplot(4,1,3)\n",
-        "    plt.plot((predictions>0.5).astype(int))\n",
-        "    plt.title(\"Binary Predictions (Threshold=0.5)\")\n",
-        "    plt.xlabel(\"Windows\")\n",
-        "    plt.ylabel('Detection')\n",
-        "\n",
-        "    # Plot spectrogram\n",
-        "    plt.subplot(3, 1, 3)\n",
-        "    stream.spectrogram(show=False)\n",
-        "    plt.title(\"Spectrogram\")\n",
+        "    plt.subplot(3,1,3)\n",
+        "    binary_preds=(predictions>0.5).astype(int)\n",
+        "    plt.plot(binary_preds, color='red', linewidth=1.5)\n",
+        "    plt.title(\"Binary Predictions(Threshold=0.5)\", fontsize=12, fontweight='bold')\n",
+        "    plt.xlabel(\"Windows\", fontsize=10)\n",
+        "    plt.ylabel(\"Detection\", fontsize=10)\n",
+        "    plt.ylim(-0.1, 1.1)\n",
+        "    plt.grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
         "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
         "def plot_training_history(history):\n",
-        "    plt.figure(figsize=(12, 4))\n",
+        "  plt.figure(figsize=(15,5))\n",
         "\n",
-        "    plt.subplot(1, 2, 1)\n",
-        "    plt.plot(history.history['loss'], label='Training Loss')\n",
-        "    plt.plot(history.history['val_loss'], label='Validation Loss')\n",
-        "    plt.title('Model Loss')\n",
-        "    plt.xlabel('Epoch')\n",
-        "    plt.ylabel('Loss')\n",
-        "    plt.legend()\n",
+        "  plt.subplot(1,3,1)\n",
+        "  plt.plot(history.history['loss'], label=\"Training loss\", color='blue')\n",
+        "  plt.plot(history.history['val_loss'], label='Validation Loss', color='red')\n",
+        "  plt.title('Model Loss', fontsize=12, fontweight='bold')\n",
+        "  plt.xlabel('Epoch', fontsize=10)\n",
+        "  plt.ylabel('loss', fontsize=10)\n",
+        "  plt.legend()\n",
+        "  plt.grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
-        "    plt.subplot(1, 2, 2)\n",
-        "    plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
-        "    plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
-        "    plt.title('Model Accuracy')\n",
-        "    plt.xlabel('Epoch')\n",
-        "    plt.ylabel('Accuracy')\n",
-        "    plt.legend()\n",
+        "  plt.subplot(1,3,2)\n",
+        "  plt.plot(history.history['accuracy'], label='Training accuracy', color='green')\n",
+        "  plt.plot(history.history['val_accuracy'], label='Validation Accuracy', color='orange')\n",
+        "  plt.title('Model Accuracy', fontsize=12, fontweight='bold')\n",
+        "  plt.xlabel('Epoch', fontsize=10)\n",
+        "  plt.ylabel('Accuracy', fontsize=10)\n",
+        "  plt.legend()\n",
+        "  plt.grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
-        "    plt.subplot(1,3,3)\n",
-        "    plt.plot(history.history['Precision'], label='Precision')\n",
-        "    plt.plot(history.history['Recall'], label='Recall')\n",
-        "    plt.title('Precision and Recall')\n",
-        "    plt.xlabel('Epoch')\n",
-        "    plt.ylabel(\"Score\")\n",
-        "    plt.legend()\n",
+        "  plt.subplot(1,3,3)\n",
+        "  plt.plot(history.history['Precision'], label='Precision', color='purple')\n",
+        "  plt.plot(history.history['Recall'], label='Recall', color='brown')\n",
+        "  plt.title('Precision and Recall', fontsize=12, fontweight='bold')\n",
+        "  plt.xlabel('Epoch', fontsize=10)\n",
+        "  plt.ylabel('Score', fontsize=10)\n",
+        "  plt.legend()\n",
+        "  plt.grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()\n",
+        "  plt.tight_layout(pad=3.0)\n",
+        "  plt.show()\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main(use_real_data=True)"
