--- a/finalyearproject.ipynb
+++ b/finalyearproject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYJAjQWPDfNE+pDFlkvN5s",
+      "authorship_tag": "ABX9TyOJxEcWpwVvG7x26/hokxmd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,25 @@
       ],
       "metadata": {
         "id": "pJYStZ8WJW10"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Install dependencies\n",
+        "This command installs Python librabries that are going to be used in this script.\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   **ObsPy**: A powerful library for processing seismic data. Provides tools for acccessing data from seismic data from seismic networks, filtering and visualizing seismic waveforms.\n",
+        "2.   **Tensorflow**: A machine learning framework developed by Google. Used for building, training and deploying machine learning models, icluding neural networks like RNNs, CNNs and more.\n",
+        "3. **Matplotlib**: Used for plotting in Python. Enables data visualization, including line plots, scatter plots, and more. Useful for displaying seismic waveforms or model performance mettrics.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2jtr73yHLjSS"
       }
     },
     {
@@ -618,7 +637,30 @@
             "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 1s/step - Precision: 0.6909 - Recall: 0.6936 - accuracy: 0.7039 - loss: 0.5787 - val_Precision: 0.4683 - val_Recall: 0.9672 - val_accuracy: 0.5036 - val_loss: 1.5457 - learning_rate: 5.0000e-04\n",
             "Epoch 15/100\n",
             "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 1s/step - Precision: 0.7057 - Recall: 0.7137 - accuracy: 0.6851 - loss: 0.5885 - val_Precision: 0.4724 - val_Recall: 0.9836 - val_accuracy: 0.5108 - val_loss: 1.3122 - learning_rate: 5.0000e-04\n",
-            "Epoch 16/100\n"
+            "Epoch 16/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 1s/step - Precision: 0.6552 - Recall: 0.6970 - accuracy: 0.6622 - loss: 0.6029 - val_Precision: 0.5566 - val_Recall: 0.9672 - val_accuracy: 0.6475 - val_loss: 0.6654 - learning_rate: 5.0000e-04\n",
+            "Epoch 17/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 1s/step - Precision: 0.7705 - Recall: 0.7014 - accuracy: 0.7112 - loss: 0.5538 - val_Precision: 0.7714 - val_Recall: 0.4426 - val_accuracy: 0.6978 - val_loss: 0.5840 - learning_rate: 5.0000e-04\n",
+            "Epoch 18/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 2s/step - Precision: 0.7591 - Recall: 0.7055 - accuracy: 0.7264 - loss: 0.5289 - val_Precision: 0.7857 - val_Recall: 0.1803 - val_accuracy: 0.6187 - val_loss: 0.6689 - learning_rate: 5.0000e-04\n",
+            "Epoch 19/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 2s/step - Precision: 0.7501 - Recall: 0.7303 - accuracy: 0.7355 - loss: 0.5171 - val_Precision: 0.5043 - val_Recall: 0.9672 - val_accuracy: 0.5683 - val_loss: 0.7422 - learning_rate: 5.0000e-04\n",
+            "Epoch 20/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 2s/step - Precision: 0.7759 - Recall: 0.6815 - accuracy: 0.7189 - loss: 0.5212 - val_Precision: 0.7568 - val_Recall: 0.4590 - val_accuracy: 0.6978 - val_loss: 0.5871 - learning_rate: 5.0000e-04\n",
+            "Epoch 21/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 2s/step - Precision: 0.7572 - Recall: 0.7438 - accuracy: 0.7481 - loss: 0.4888 - val_Precision: 1.0000 - val_Recall: 0.0164 - val_accuracy: 0.5683 - val_loss: 1.0905 - learning_rate: 5.0000e-04\n",
+            "Epoch 22/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 2s/step - Precision: 0.7481 - Recall: 0.6713 - accuracy: 0.7018 - loss: 0.5548 - val_Precision: 0.7105 - val_Recall: 0.4426 - val_accuracy: 0.6763 - val_loss: 0.6039 - learning_rate: 5.0000e-04\n",
+            "Epoch 23/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 2s/step - Precision: 0.7501 - Recall: 0.8253 - accuracy: 0.7770 - loss: 0.4941 - val_Precision: 0.6222 - val_Recall: 0.9180 - val_accuracy: 0.7194 - val_loss: 0.6167 - learning_rate: 2.5000e-04\n",
+            "Epoch 24/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m46s\u001b[0m 2s/step - Precision: 0.8064 - Recall: 0.7537 - accuracy: 0.7676 - loss: 0.4750 - val_Precision: 0.6571 - val_Recall: 0.7541 - val_accuracy: 0.7194 - val_loss: 0.5633 - learning_rate: 2.5000e-04\n",
+            "Epoch 25/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 2s/step - Precision: 0.8335 - Recall: 0.7928 - accuracy: 0.8048 - loss: 0.4452 - val_Precision: 0.7188 - val_Recall: 0.3770 - val_accuracy: 0.6619 - val_loss: 0.6528 - learning_rate: 2.5000e-04\n",
+            "Epoch 26/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 2s/step - Precision: 0.8249 - Recall: 0.8064 - accuracy: 0.8030 - loss: 0.4460 - val_Precision: 0.6774 - val_Recall: 0.6885 - val_accuracy: 0.7194 - val_loss: 0.5568 - learning_rate: 2.5000e-04\n",
+            "Epoch 27/100\n",
+            "\u001b[1m18/18\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - Precision: 0.8108 - Recall: 0.7882 - accuracy: 0.8022 - loss: 0.4167"
           ]
         }
       ]
