--- a/finalyearproject.ipynb
+++ b/finalyearproject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0ZuqAbaz/TDIcEXqo8yIe",
+      "authorship_tag": "ABX9TyOhTsG/RwGxmfwrGKcOzo2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -216,7 +216,7 @@
       "metadata": {
         "id": "hXsHOn5DyE9Q"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
         "  \"\"\"\n",
         "  try:\n",
         "    client=Client(\"IRIS\")\n",
-        "    stream=client.get_waveforms(network, station, location, channel, start_time, end_time)\n",
+        "    stream=client.get_s(network, station, location, channel, start_time, end_time)\n",
         "    return stream\n",
         "  except Exception as e:\n",
         "    print(f\"Error fetching data from IRIS: {str(e)}\")\n",
@@ -237,8 +237,43 @@
       "metadata": {
         "id": "UJDzTxvtzb9p"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Generate synthetic data\n",
+        "The function `generate_synthetic_data` generates synthetic data for testing and validation purposes. The generated data simulates background noises along with one or more seismic events, making it suitable for training and evaluating algorithms designed to detect seismic activity.\n",
+        "\n",
+        "`num_samples` (int): This is the total number of smaples in the synthetic signal.\n",
+        "\n",
+        "`sample_rate`(int): Is the number of samples per second, used to define the time axis of the signal.\n",
+        "\n",
+        "`event_duration`(float): Duration of each syntetic evet in seconds.\n",
+        "\n",
+        "`noise_level` (float): Standard deviationof the Gaussian noise added to simulate background seismic noise.\n",
+        "\n",
+        "`data`(ndarray): A 1D array representing the synthetic signal, which includes both noise and seismic events.\n",
+        "\n",
+        "`events`(ndarray): A 1D array containing only the synthetic seismic events witout noise, useful for comparison and validation.\n",
+        "\n",
+        "`event_locations`(tuples): A list of tuples where each tuple contains the start and end indices of a seismic event in the `data` array.\n",
+        "\n",
+        "### How the function works\n",
+        "**Time axis creation**: The function creates a time array using `num_samples` and `sample_rate`.\n",
+        "\n",
+        "**Background Noise Generation**: Gaussian noise is generated using `np.random.normal` to simulate continuous background seismic noise.\n",
+        "\n",
+        "**Seismic Event Creation**: A random number of events (between 1 and 3) is generated. For each event; a random starting point is selected witin the midlle 3/4 of the signal, event characteristics (frequency, amplitude, and exponential decay) are randomly assigned, and a sinusoidal waveform is generated, simulating a seismic event with an exponential decaying amplitude.\n",
+        "\n",
+        "**Event addition**: The generated events are added to the noise to form the final synthetic signal.\n",
+        "\n",
+        "**Return Values**: The function returns the complete synthetic signal, the isolated events and their corresponding locations in the signal."
+      ],
+      "metadata": {
+        "id": "OBKaGD07Lrfb"
+      }
     },
     {
       "cell_type": "code",
@@ -276,8 +311,42 @@
       "metadata": {
         "id": "1LYVY0Vp0Fay"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Featire Engineering\n",
+        "The function `create_windows` generates sliding windows from a time series dataset. Each window includes engineered features to prepare the data for training recurrent neural networks (RNNs) or other machine learning models.\n",
+        "\n",
+        "`data`(ndarray): A 1D array representing the time-series data.\n",
+        "\n",
+        "`window_size`(int): The number of data points in each sliding window.\n",
+        "\n",
+        "`step`(int): The step size between consecutive windows. Smaller step sizes result in overlapping windows.\n",
+        "\n",
+        "`windows`(ndarray): A 3D array where each entry is a sliding window with engineered features:\n",
+        "  1. Column 1: Raw signal values\n",
+        "  2. Column 2: Absolute amplitude of the signal.\n",
+        "  3. Column 3: First derivative (rate of change) of the signal.\n",
+        "  4. Column 4: Second derivative (acceleration) of the signal.\n",
+        "\n",
+        "`labels`(ndarray): A 1D array where each label corresponds to the mean value of the raw signal in its respective window.\n",
+        "\n",
+        "### How it works\n",
+        "\n",
+        "**Sliding Window Creation**: The function iterates over the `data` array using a sliding window approach. For each window, it extracts `window_size` points from index `i` moving by `step`.\n",
+        "\n",
+        "**Feature engineering**: For each window, four features are computed and stacked; The raw signal, absolute value of the signal, First derivtive (using `np.gradient`) and the second derivative (also using `np.gradient`).\n",
+        "\n",
+        "**Label assignment**: Each window is assigned a label, which is the mean of the raw signal values within the window.\n",
+        "\n",
+        "**Output**: Returns arrays of feature-engineered windows and their corresponding labels.\n"
+      ],
+      "metadata": {
+        "id": "ts7OQxosSqIR"
+      }
     },
     {
       "cell_type": "code",
@@ -308,7 +377,7 @@
       "metadata": {
         "id": "_XeYWuzf0TYJ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +426,7 @@
       "metadata": {
         "id": "uYa6a3Wb3g-F"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +446,7 @@
       "metadata": {
         "id": "6AZhJZ9-6vyU"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -416,7 +485,7 @@
       "metadata": {
         "id": "EJCQEdlG7p_1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +599,7 @@
       "metadata": {
         "id": "Yf0a8tE6_D0d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +649,7 @@
       "metadata": {
         "id": "8_FXGGUBGEkV"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +691,7 @@
       "metadata": {
         "id": "A18acwHgI9_q"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +708,7 @@
         "id": "2_HqQu76LPC7",
         "outputId": "99c92185-2553-4b42-9789-c9a84688ed1b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
