--- a/finalyearproject.ipynb
+++ b/finalyearproject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhTsG/RwGxmfwrGKcOzo2F",
+      "authorship_tag": "ABX9TyPzmOPpDF0belQRE8Nya3ih",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,6 +381,46 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Model Building\n",
+        "This function builds a sophisticated recurrent neural network (RNN) model using multiple Long Short-Term Memory (LSTM) layers. The model is designed for binary classification tasks, enhanced with bidirectional LSTMs dropout layers, and Batch normalization for improved performance and generalization.\n",
+        "\n",
+        "###Key components\n",
+        "**Bidirectional LSTMS**: Captures both past and future dependencies in the sequence data. Enhances the model's ability to learn complex temporal patterns.\n",
+        "\n",
+        "**Batch Normalization**: Normalizes activations of each layer to improve training stability and convergence.\n",
+        "\n",
+        "**Dropout**: Reduces overfitting by randomly deactivating a fraction of neurons during training.\n",
+        "\n",
+        "**Dense layers**: Fully connected layers of classification, transforming LSTM outputs into the final prediction.\n",
+        "\n",
+        "**Output layer**: A single neuron with a sigmoid activation function for binary classification (outputs probabilities between 0 and 1).\n",
+        "\n",
+        "### Parameters\n",
+        "`input_shape` (tuple): Shape of the input data excluding the batch size, typically (`time_steps`, `features`)\n",
+        "\n",
+        "### Model Architecture\n",
+        "1. **Layer 1**: Bidirectional LSTM with 128 units (returns sequences). Batch Normaliation and 30% dropout.\n",
+        "2. **Layer 2**: Bidirectional LSTm with 96 units (returns sequences). Batch Normaliation and 30% dropout.\n",
+        "3. **Layer 3**: LSTM with 64 units (no sequences returned). Batch Normalization and 20% dropout.\n",
+        "4. **Dense layers**: 32 and 16 neurons with ReLU activation. Batch normaliation and 20% dropout applied to the first dense layer.\n",
+        "5. **Output layer**: Single neuron with sigmoid activation for binary classification.\n",
+        "\n",
+        "### Compilation\n",
+        "**Optimizer**: Adam optimizer with a custome learning rate of 0.001.\n",
+        "\n",
+        "**Loss function**: Binary cross-entropy, appropriate for binary classification tasks.\n",
+        "\n",
+        "**Metrics**: The model evaluates performance using `accuracy`, `precision`, `recall`.\n",
+        "\n",
+        " `model` returns a compiled TensorFlow Keras model ready for training.\n"
+      ],
+      "metadata": {
+        "id": "KPykuXzpWt2n"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def build_enhanced_rnn_model(input_shape):\n",
@@ -430,6 +470,33 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Seismic data preprocessing\n",
+        "This function preprocesses seismic data by applying a series of standard signal processing steps, including detrending, tapering and bandpass filtering. The goal is to enhance the signal quality and remove unwanted noise for further analysis and modelling.\n",
+        "\n",
+        "### Parameters\n",
+        "1. `stream` (`onspy.Stream`): The input seismic data stream to be processed. It may contain one or more traces of raw seismic data.\n",
+        "\n",
+        "2. `freqmin` (float, default=0.5): The minimum frequency for the bandpass filter, used to remove low-frequency noise.\n",
+        "\n",
+        "3. `freqmax` (float, default=20): The maximum frequency for the bandpass filter, used to remove high-frequency noise.\n",
+        "\n",
+        "### Returns\n",
+        "`processed_stream (`obspy.Stream`): A copy of input stream with the followimg preprocessing steps applied.\n",
+        "\n",
+        "### Processing steps\n",
+        "**Detrending**: Removes any linear trend from the data to correct for baseline drift. Uses the `linear` detrending method to ensure that the mean of the signal is zero.\n",
+        "\n",
+        "**Tapering**: Applies a tapering function to the edges of the signal to reduce spectral leakage during filtering. The taper affects up to 5% of the signal at both ends (`max_percentage=0.05`).\n",
+        "\n",
+        "**Bandpass Filtering**: Filters the signal to retain only frequencies within the range [`freqmin`, `freqmax`]. Uses a 4th order Butterworth filter (`corners=4`) with zero-phase filtering (`zerophase=True`) to avoid phase distortion."
+      ],
+      "metadata": {
+        "id": "Xf1v5k5abSX7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def process_stream(stream, freqmin=0.5, freqmax=20):\n",
@@ -448,6 +515,36 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model Evaluation\n",
+        "This function evaluates the performance of a trained binary classification model on a dataset. It calculates the various performance metrics, generates a classification report, and visualizaes the confusion matrix to provide a comprehensive analysis of the model's predictive capabilities.\n",
+        "\n",
+        "### Parameters\n",
+        "1. `model` (`keras.Model`): The trained Keras model to be evaluated.\n",
+        "2. `X_test`(ndarray): Test features used for evaluation.\n",
+        "3. `y_test`(ndarray): True labels for the dataset.\n",
+        "4. `predictions`(ndarray): The predicted probabilities output by the model for `X_test`.\n",
+        "\n",
+        "### Returns\n",
+        "`accuracy` (float): The accuracy of the model on the test set.\n",
+        "`precision`(float): The precision score indicating the proportion of positive identifications that were correct.\n",
+        "`recall` (float): The recall score, showing the proportion of actual positives identified correctly.\n",
+        "`f1` (float): the F1 Score, the harmonic mean of precision and recall.\n",
+        "\n",
+        "### Steps and Outputs\n",
+        "1. **Binary predictions**: Converts predicted probabilities into binary class predictions using a threshold of `0.5`.\n",
+        "2. **Performance metrics**: **Accuracy**: the proportion of correct predictions. **Precision**: The ratio of true positives of all predicted positives. **Recall**: the raitio of true positives to all actual positives. **F1 Score**: A balanced measure of precision and recall\n",
+        "\n",
+        "3. **Classificatio report**: Provides a detailed report showing precision, recall, F1-score and support for each class.\n",
+        "\n",
+        "4.**Confusion matrix**: Visualizes te confusion matrix as a heatmap, showing the distriution of true vs predicted labels."
+      ],
+      "metadata": {
+        "id": "-JxTY3qpedJs"
+      }
     },
     {
       "cell_type": "code",
@@ -487,6 +584,49 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Main\n",
+        "Tis function serves as the entry oint for a seismic event detection pipeline. It orchestrates the workflow, from data acquisition to model training and evaluation, providing flexibility to use either real seismic data or synthetic data.\n",
+        "\n",
+        "### Key components\n",
+        "1. **Configuration Parameters** (`config`):\n",
+        "Defines various parameters for data processing and model training:\n",
+        "`window_size`: Sie for sliding windows for input features\n",
+        "`step`: Step size for sliding windows.\n",
+        "`sample_rate`: Smapling rate of seismic data.\n",
+        "`sta_length` and `lta_length`: Parameters for STA/LTA detection.\n",
+        "`threshold`: Detection threshold for triggers.\n",
+        "`num_samples`: Number of samples for synthetic data generation.\n",
+        "\n",
+        "###Data Acquisition\n",
+        "**Real Data**: Fetches seismic data from the IRIS database for the lat hour using the `fetch_iris_data` funstion.\n",
+        "**Synthetic data**: Generates synthetic seismic data with multiple events using the `generate_synthetic_data` function if real data is unavailable.\n",
+        "\n",
+        "### Data Preprocessing\n",
+        "Applies filtering to the seismic stream using the `process_stream` function.\n",
+        "Creates input features and labels using `create_windows`.\n",
+        "\n",
+        "###Labelling\n",
+        "For real data, labels are generated using STA/LTA triggers.\n",
+        "For synthetic data, labels are generated based on the presence of events.\n",
+        "\n",
+        "###Data normalization and Splitting\n",
+        "Splits the data into training and testing using `train_test_split`.\n",
+        "Normalizaes data using the mean and standard deviation and learning rate reduction callbacks.\n",
+        "\n",
+        "###Model evaluation\n",
+        "Makes predictions on the test set.\n",
+        "Evaluates the model using `evaluate_model`, calculating accuracy, precision, recall and F1 Score.\n",
+        "\n",
+        "###Visualization\n",
+        "Visualizaes the results using `plot_results` and plots the training history with `plot_training_history`."
+      ],
+      "metadata": {
+        "id": "3TEGGM7c1CV0"
+      }
     },
     {
       "cell_type": "code",
