--- a/finalyearproject.ipynb
+++ b/finalyearproject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzmOPpDF0belQRE8Nya3ih",
+      "authorship_tag": "ABX9TyOCkBR6zGlD4c0jh2RkwBWV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,7 +317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Featire Engineering\n",
+        "## Feature Engineering\n",
         "The function `create_windows` generates sliding windows from a time series dataset. Each window includes engineered features to prepare the data for training recurrent neural networks (RNNs) or other machine learning models.\n",
         "\n",
         "`data`(ndarray): A 1D array representing the time-series data.\n",
@@ -387,7 +387,7 @@
         "This function builds a sophisticated recurrent neural network (RNN) model using multiple Long Short-Term Memory (LSTM) layers. The model is designed for binary classification tasks, enhanced with bidirectional LSTMs dropout layers, and Batch normalization for improved performance and generalization.\n",
         "\n",
         "###Key components\n",
-        "**Bidirectional LSTMS**: Captures both past and future dependencies in the sequence data. Enhances the model's ability to learn complex temporal patterns.\n",
+        "**Bidirectional LSTMs**: Captures both past and future dependencies in the sequence data. Enhances the model's ability to learn complex temporal patterns.\n",
         "\n",
         "**Batch Normalization**: Normalizes activations of each layer to improve training stability and convergence.\n",
         "\n",
@@ -476,7 +476,7 @@
         "This function preprocesses seismic data by applying a series of standard signal processing steps, including detrending, tapering and bandpass filtering. The goal is to enhance the signal quality and remove unwanted noise for further analysis and modelling.\n",
         "\n",
         "### Parameters\n",
-        "1. `stream` (`onspy.Stream`): The input seismic data stream to be processed. It may contain one or more traces of raw seismic data.\n",
+        "1. `stream` (`obspy.Stream`): The input seismic data stream to be processed. It may contain one or more traces of raw seismic data.\n",
         "\n",
         "2. `freqmin` (float, default=0.5): The minimum frequency for the bandpass filter, used to remove low-frequency noise.\n",
         "\n",
