--- a/finalyearproject.ipynb
+++ b/finalyearproject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzV3BJId0BjmVOY6KY7XxD",
+      "authorship_tag": "ABX9TyMzpgNXY6kKsoyhzxAafimv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -821,6 +821,43 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training History\n",
+        "This function visualizes the training and validation history of a neural network model, providing insights into its performance over each epoch.\n",
+        "\n",
+        "### Key features\n",
+        "**Loss Plot**: Displays the model's training and validation loss over epochs. Helps identify underfitting or overfitting; If validation loss increases while training loss decreases, the model may be overfitting.\n",
+        "\n",
+        "**Accuracy Plot**: Shows the training and validation accuracy over epochs. Indicates how well the model is learning to generalize.\n",
+        "\n",
+        "**Precision and Recall plot**: Visualizes precision and recall metrics during training. Hihlights the trade-off between precision and recall.\n",
+        "\n",
+        "\n",
+        "### Parameters\n",
+        "`history`(`History` object): The output from the `fit` method of a Keras model, containing loss and metric values for both training and validation.\n",
+        "\n",
+        "### Plot Structure\n",
+        "**Subplot1**:\n",
+        "1. Title: Model Loss\n",
+        "2. Y-axis: Loss values (binary cross-entropy loss).\n",
+        "3. Curves: Training loss(blue), validation loss(red).\n",
+        "\n",
+        "**Subplot2**:\n",
+        "1. Title: Model Accuracy.\n",
+        "2. Y-axis: Accuracy score.\n",
+        "3. Curves: Training accuracy (green). Validation accuracy(orange).\n",
+        "\n",
+        "**Subplot 3**:\n",
+        "1. Title: Precision and Recall\n",
+        "2. Y-axis: Metric values.\n",
+        "3. Curves: Precision (purple). Recall (brown).\n"
+      ],
+      "metadata": {
+        "id": "blLFQrOyvUdt"
+      }
     },
     {
       "cell_type": "code",
