--- a/FinalProjectIteration.ipynb
+++ b/FinalProjectIteration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPwNWNt57km2SGlA4xxWSd3",
+      "authorship_tag": "ABX9TyO5Z/PMUQ1x+vEcINfafux4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1020,6 +1020,45 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Plot Seismic Data\n",
+        "The function is designed to visualize and compare seismi data from three diffeerent sources, the real seismic data, synthetic data and a combination of both. It generates a side-by-side comparison of these data sources in the form of a plot and saves the pot as an image file\n",
+        "\n",
+        "##Parameters\n",
+        "`real_data`: The actual seismic data from Indonesian station.\n",
+        "\n",
+        "`synthetic_data`: Simulated seismic data generated through modelling or computational techniques.\n",
+        "\n",
+        "`combined_data`: Data resulting from the combination of real and synthetic data, often used to analyze correlation or validate models.\n",
+        "\n",
+        "`base_dir`: The directory path where the plot image will be saved.\n",
+        "\n",
+        "##Functionality\n",
+        "1. Figure Setup\n",
+        "The function creates a `matplotlib` figure with a size of `15*10` inches, providing ample space for three subplors stacked vertically.\n",
+        "\n",
+        "2. Subplots for Visualization\n",
+        "**First Subplot**: Plots the `real_data` as \"Real Seismic Data\" with x-axis for samples and y-axis for amplitude.\n",
+        "\n",
+        "**Second Subplot**: Plots the `synthetic_data` array. Labels the plot as \"Synthetic Seismic Data\" with the same axis labels.\n",
+        "\n",
+        "**Third Subplot**: Plots the `combined_data`/ Labels the plot as \"Combined Seismic Data\", maintaining the labels.\n",
+        "\n",
+        "3. Layout Adjustments\n",
+        "The function uses `plt.tight_layout()` to ensure there is no overlapping of subplot titles or axes.\n",
+        "\n",
+        "4. Saving the Plot\n",
+        "The plot is saved as `seismic_data_comparison.png` in the specified `base_dir` directory using the `os.path.join` method.\n",
+        "\n",
+        "5. Closing the Plot\n",
+        "`plt.close()` ensures the figure is properly closed, freeing up memory resources and avoiding display in the environment.\n"
+      ],
+      "metadata": {
+        "id": "ACW9ucH5v5MA"
+      }
     },
     {
       "cell_type": "code",
