--- a/FinalProjectIteration.ipynb
+++ b/FinalProjectIteration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyO5Z/PMUQ1x+vEcINfafux4",
+      "authorship_tag": "ABX9TyM4C59UVct7XUp6dmiVD43f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1000,6 +1000,45 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Plot Precision Recall Curve\n",
+        "The function generates a Precision-Recall Curve which is a graphical representation of the tradeoff between precision and recall for different classification thresholds. It saves the plot as an image file in the specified directory.\n",
+        "\n",
+        "##Parameters\n",
+        "`y_true`: True binary labels of the dataset(0, 1), indicating whether a data point belongs to the positive case.\n",
+        "\n",
+        "`y_scores`: Predicated probabilities or scores are assigned to the positive class by the classifier. These scores are used to compute precision adn recall at various thresholds.\n",
+        "\n",
+        "`base_dir`: Directory path where the generated plot will be saved.\n",
+        "\n",
+        "##Functionality\n",
+        "1. **Computing Precision and Recall**\n",
+        "The function uses `precision_recall_curve` from `sklearn.metrics` to compute precision and recall values over a range of thresholds.\n",
+        "\n",
+        "The function also outputs thresholds\n",
+        "\n",
+        "2. **Plotting the curve**\n",
+        "A new figure is created with a size of `8*6` inches for clear visualization.\n",
+        "\n",
+        "Precision is plotted on the y-axis and recall is plotted on the x-axis. A blue line represents the curve.\n",
+        "\n",
+        "Labels and a legend are added to make the plot informative.\n",
+        "\n",
+        "3. **Adjusting the Layout**\n",
+        "The `plt.tight_layout()` method ensures that the elements of the plot are arranged neatly without overlap.\n",
+        "\n",
+        "4. **Saving the Plot**\n",
+        "The plot is saved as an image named `precision_recall_curve.png` in the specified `base_dir` using `os.path.join` for robust path handling.\n",
+        "\n",
+        "5. **Closing the plot**\n",
+        "`plt.close()` is called to release resources and avoid displaying of the figure."
+      ],
+      "metadata": {
+        "id": "4_Y1NwlEy4dA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def plot_precision_recall_curve(y_true, y_scores, base_dir):\n",
@@ -1037,23 +1076,23 @@
         "`base_dir`: The directory path where the plot image will be saved.\n",
         "\n",
         "##Functionality\n",
-        "1. Figure Setup\n",
+        "1. **Figure Setup**\n",
         "The function creates a `matplotlib` figure with a size of `15*10` inches, providing ample space for three subplors stacked vertically.\n",
         "\n",
-        "2. Subplots for Visualization\n",
-        "**First Subplot**: Plots the `real_data` as \"Real Seismic Data\" with x-axis for samples and y-axis for amplitude.\n",
+        "2. **Subplots for Visualization**\n",
+        "First Subplot: Plots the `real_data` as \"Real Seismic Data\" with x-axis for samples and y-axis for amplitude.\n",
         "\n",
-        "**Second Subplot**: Plots the `synthetic_data` array. Labels the plot as \"Synthetic Seismic Data\" with the same axis labels.\n",
+        "Second Subplot: Plots the `synthetic_data` array. Labels the plot as \"Synthetic Seismic Data\" with the same axis labels.\n",
         "\n",
-        "**Third Subplot**: Plots the `combined_data`/ Labels the plot as \"Combined Seismic Data\", maintaining the labels.\n",
+        "Third Subplot: Plots the `combined_data`/ Labels the plot as \"Combined Seismic Data\", maintaining the labels.\n",
         "\n",
-        "3. Layout Adjustments\n",
+        "3. **Layout Adjustments**\n",
         "The function uses `plt.tight_layout()` to ensure there is no overlapping of subplot titles or axes.\n",
         "\n",
-        "4. Saving the Plot\n",
+        "4. **Saving the Plot**\n",
         "The plot is saved as `seismic_data_comparison.png` in the specified `base_dir` directory using the `os.path.join` method.\n",
         "\n",
-        "5. Closing the Plot\n",
+        "5. **Closing the Plot**\n",
         "`plt.close()` ensures the figure is properly closed, freeing up memory resources and avoiding display in the environment.\n"
       ],
       "metadata": {
