--- a/FinalProjectIteration.ipynb
+++ b/FinalProjectIteration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM4C59UVct7XUp6dmiVD43f",
+      "authorship_tag": "ABX9TyP8xGaWgsq3P/Y0SO+nfmQk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1132,6 +1132,94 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#The Main Function\n",
+        "The `main` function orchestrates the complete workflow for processing seismic data, generating synthetic data, combining datasets, and training a model detect seismic events. It integrates data preparation, visualization and machinelearning in a sequential and modular manner.\n",
+        "\n",
+        "##Steps and functionality\n",
+        "1. **Configuration Setup**\n",
+        "Defines a configuration dictionary `config` with parameters for:\n",
+        "\n",
+        "  `window_size`: Size of the data window for training.\n",
+        "\n",
+        "  `step`: Step size for sliding window operations.\n",
+        "\n",
+        "  `sample_rate`: Default sampling rate (Hz).\n",
+        "\n",
+        "  `num_samples`: Number of samples in fallback synthetic data.\n",
+        "\n",
+        "2. **Output Directory Creation**\n",
+        "Calls `create_output_directory` to create a directory for saving all outputs, including plots and model files.\n",
+        "\n",
+        "3. **Fetching real earthquake data**\n",
+        "Defines the earthquake's origin time using `UTCDateTime` and fetches data using `fetch_iris_data` with:\n",
+        "\n",
+        "  Seismic network, station and channel information.\n",
+        "\n",
+        "  `origin_time` for temporal alignment.\n",
+        "\n",
+        "  Duration of 120 seconds.\n",
+        "\n",
+        "If the data fetch is successful:\n",
+        "\n",
+        "   Processes the data stream using `process_stream` to filter the signal and compute the charcteristic function (`real_cft`).\n",
+        "\n",
+        "  Extracts raw data and its sampling rate.\n",
+        "\n",
+        "If no data is fetched:\n",
+        "\n",
+        "  Initializes fallback data as a zero-filled array with length `num_samples` and defualt `sample_rate`.\n",
+        "\n",
+        "  Sets `real_cft` to `None`.\n",
+        "\n",
+        "4. **Synthetic Data Generation**\n",
+        "Calls `generate_synthetic_data` to create synthetic seismic data with parameters:\n",
+        "\n",
+        "  Length equal to the rel data.\n",
+        "\n",
+        "  Sampling rate.\n",
+        "\n",
+        "  Event duration (2 seconds) and noise level(0.1)\n",
+        "\n",
+        "Outputs include:\n",
+        "\n",
+        "  `synthetic_data`: Generated data.\n",
+        "\n",
+        "  `synthetic_events`: List of synthetic event times.\n",
+        "\n",
+        "  `synthetic_event_location`: Location of synthetic events in the data.\n",
+        "\n",
+        "5. **Combining Datasets**:\n",
+        "Adds `real_data` and `synthetic_data` element wise to create `combined_data`, simulating real-world scenarios where noise and real seismic signals overlap.\n",
+        "\n",
+        "6. **Creating Windows and labels**\n",
+        "Uses `create_enhanced_windows` to split `combined_data` into sliding widows with:\n",
+        "\n",
+        "  Defines `window_size` and `step` from the configuration\n",
+        "\n",
+        "  Event locations (`synthetic_event_location`) for labelling.\n",
+        "\n",
+        "  The real signal's characteristic function (`real_cft`) to refine labelling.\n",
+        "\n",
+        "7. **Model Traing and Evaluation**\n",
+        "Calls `train_evaluate_model` to train the model using:\n",
+        "\n",
+        "  Features (`X`) and labels (`y`) from the windowed data.\n",
+        "\n",
+        "  Outputs the trained model and cross-validation scores.\n",
+        "\n",
+        "8. **Visualization**\n",
+        "Generates a plot comparing `real_data`, `synthetic_data` and `combined_data` using `plot_seismic_data` saving it in the `base_dir`.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "T1imCmmh3AJg"
+      }
     },
     {
       "cell_type": "code",
