--- a/FinalProjectIteration.ipynb
+++ b/FinalProjectIteration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP8xGaWgsq3P/Y0SO+nfmQk",
+      "authorship_tag": "ABX9TyOeKCUPpH41jA6h4dD+wtBx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,7 +201,7 @@
         "# Generate Synthetic Data\n",
         "The function creates synthetic seismic waveform data, including background noise and multiple seismic-like events.\n",
         "\n",
-        "##Funstion parameters\n",
+        "##Function parameters\n",
         "`num_samples`: Total number of samples in the synthetic signal.\n",
         "\n",
         "`sample_rate`: Number of samples per second.\n",
@@ -621,7 +621,7 @@
         "1. **Feature Scaling**:\n",
         "The function uses `StandardScaler() to scale the input features (`X`) to have a mean of 0 and a standard deviation of 1 for improved model performance.\n",
         "\n",
-        "`X_scaled=scaler.fit_transform(X.reshape(-1, X.shape[-1])).reshape(X.shape) reshapes and scales the input data accordingly.\n",
+        "`X_scaled=scaler.fit_transform(X.reshape(-1, X.shape[-1])).reshape(X.shape)`reshapes and scales the input data accordingly.\n",
         "\n",
         "2. **Cross-Validation setup**:\n",
         "**Stratified K-Fold Cross Validation**: `StratifiedKFold(n_splits=10)` ensures that each fold has a balanced distribution of classes (seismic event and no event).\n",
@@ -671,7 +671,7 @@
         "`cv_scores`: A dictionary containing cross-validation scores for eac metric accuracy, precision, recall, F1 Score and AUC\n",
         "\n",
         "##Key enhancements\n",
-        "**Cross-Validation: Using Stratified K-Fold ensures balabced training and testing sets.\n",
+        "**Cross-Validation**: Using Stratified K-Fold ensures balabced training and testing sets.\n",
         "\n",
         "**Regularization**: includes L2 regularization, dropout, and batch normalization to improve generalization and avoid overfitting.\n",
         "\n",
@@ -864,7 +864,7 @@
         "`base_dir`: Directory where the training metrics plot will be saved.\n",
         "\n",
         "##Figure Initialization\n",
-        "Sets the figure size to 15*10 inches.\n",
+        "Sets the figure size to `15*10` inches.\n",
         "\n",
         "##Subplot 1: Model Loss\n",
         "Plots training hand validation loss values from `history.history['loss']` and `history.history['val_loss']`.\n",
