--- a/FinalProjectIteration.ipynb
+++ b/FinalProjectIteration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOeKCUPpH41jA6h4dD+wtBx",
+      "authorship_tag": "ABX9TyMGMUVG2AvGs7kprHGnuNxF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,45 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cedamusk/final-year/blob/main/FinalProjectIteration.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ek0lkt_BOuYs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Install dependencies\n",
+        "##Purposes\n",
+        "This code installs Python Libraries necessary for the project for machine learnin, signal processing and data visualization\n",
+        "\n",
+        "#Libraries\n",
+        "1. Tensorflow\n",
+        "An open source machine learning framework for creating and deploying deep learning mmodels\n",
+        "\n",
+        "#Obspy\n",
+        "Python library designed for processing and analysing seismological data.\n",
+        "\n",
+        "It provides tools fro reading, writing and processing waveform data and supports seismic event analysis.\n",
+        "\n",
+        "#Matplotlib\n",
+        "Matplotlib is a plotting library used for creating static, interactive and animated visualizations.\n",
+        "\n",
+        "It helps visualize seismic waveforms, and machine learning model outputs.\n",
+        "\n",
+        "#Scikit-learn\n",
+        "Machin learning library that provides tools for classification and providing the metrics of scoring the model.\n",
+        "\n",
+        "It is also used in feature engineering.\n"
+      ],
+      "metadata": {
+        "id": "3uhH669_Oste"
+      }
     },
     {
       "cell_type": "code",
